# StardewValley-ModManager

./: .gitignore  .impeccable.md  README.md  ValleySteward.sln  docker-compose.yml  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DESIGN_SYSTEM.md  PRD.md
public/: theme-init.js
scripts/: tauri-windows.ps1  tauri.mjs
src/: App.tsx  api.ts  main.tsx  mock.ts  styles.css  theme.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.smoke.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs
src-tauri/src/providers/: github.rs  github_settings.rs  mod.rs  nexus.rs  smapi.rs  translation.rs
src-tauri/src/services/: game.rs  game_process.rs  mod.rs  mods.rs
src-winui/ValleySteward.ShareServer/: .dockerignore  Dockerfile  Program.cs
src-winui/ValleySteward.WinUI/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  ValleySteward.WinUI.csproj  app.manifest
src-winui/ValleySteward.WinUI.Smoke/: Program.cs  ValleySteward.WinUI.Smoke.csproj
src-winui/ValleySteward.WinUI/Common/: ObservableObject.cs
src-winui/ValleySteward.WinUI/Models/: ActivityModels.cs  AiTranslationModels.cs  AppModels.cs  ModInstallModels.cs  ModUpdateDownloadModels.cs  ModUpdateModels.cs  NexusModels.cs  ShareModels.cs  SmapiModels.cs
src-winui/ValleySteward.WinUI/Pages/: DownloadsPage.xaml  DownloadsPage.xaml.cs  ModsPage.xaml  ModsPage.xaml.cs  OverviewPage.xaml  OverviewPage.xaml.cs  SettingsPage.xaml  SettingsPage.xaml.cs  ShareHallPage.xaml  ShareHallPage.xaml.cs  SmapiPage.xaml  SmapiPage.xaml.cs
src-winui/ValleySteward.WinUI/Properties/: AssemblyInfo.cs
src-winui/ValleySteward.WinUI/Services/: ActivityHistoryService.cs  AiTranslationService.cs  AppPaths.cs  CredentialService.cs  DownloadTranslationSidecarService.cs  GameDiscoveryService.cs  GameProcessService.cs  GitHubDownloadSettingsService.cs  ModInstallerService.cs  ModService.cs  ModShareService.cs  ModUpdateBatchService.cs  ModUpdateDownloadService.cs  ModUpdateService.cs  NexusDownloadService.cs  RemoteModService.cs  SmapiInstallerService.cs  SmapiReleaseService.cs  SmapiService.cs  SteamService.cs  UiSettingsService.cs
src-winui/ValleySteward.WinUI/ViewModels/: ShellViewModel.cs
src/components/layout/: Sidebar.tsx  Topbar.tsx
src/hooks/: index.ts  useDashboard.ts  useGameProcess.ts  useLaunchArguments.ts  useLaunchPreference.ts  useSteamStatus.ts  useThemeMode.ts
src/utils/: path.ts  semver.ts
(+13 files in other folders)
