[package]
name = "valley-steward"
version = "0.1.0"
description = "A safe Stardew Valley mod manager"
authors = ["Valley Steward contributors"]
edition = "2021"

[lib]
name = "valley_steward_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dirs = "6"
keyring = "4.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.9.3", features = [] }
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util"] }
walkdir = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Diagnostics_ToolHelp", "Win32_System_JobObjects", "Win32_System_Threading"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
